--- a/q2.html
+++ b/q2.html
@@ -45,7 +45,7 @@
         }
 
         if (weight && destination) {
-            if (weight <= 1) {
+            if (weight > 0 && weight <= 1) {
                 if (destination === "local") {
                     console.log(`the shipping cost for the item is : ${5}$`);
                 }
